<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".ui.activities.AddOrEditNoteActivity">

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/edittext_card"
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@color/Et_back"
            android:hint="@string/titleHint"
            android:maxLines="2"
            android:minLines="2"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </soup.neumorphism.NeumorphCardView>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/txtDesc"
        app:layout_constraintTop_toBottomOf="@+id/edittext_card"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        android:layout_margin="12dp"
        android:padding="6dp"
        android:textSize="14sp"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@color/Et_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/descriptionHint"
        />


    <soup.neumorphism.NeumorphButton
        android:id="@+id/btnSave"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:drawablePadding="8dp"
        android:text="@string/btn_add_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <soup.neumorphism.NeumorphButton
        android:id="@+id/btnEdit"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:neumorph_shadowElevation="6dp"
        android:textColor="@color/white"
        app:neumorph_backgroundColor="@color/back_neu"
        app:neumorph_shadowColorLight="@color/light_color"
        app:neumorph_shadowColorDark="@color/dark_color"
        android:layout_marginBottom="36dp"
        android:drawablePadding="8dp"
        android:text="edit note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>